--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,14 @@ body {
 .hero {
   padding-top: 188px;
   padding-bottom: 188px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero/fon-image-hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .hero-title {
@@ -235,6 +243,20 @@ body {
   flex-basis: calc((100% - 72px) / 4);
 }
 
+.about-icons-container {
+  width: 264px;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+  padding: 24px 100px;
+}
+
+.about-icons {
+  width: 64px;
+  height: 64px;
+}
+
 .about-title {
   margin-bottom: 8px;
 }
@@ -271,6 +293,9 @@ body {
   /* width: calc((100 - 72px) / 4); */
   background: var(--bkg-primary-color);
   border-radius: 0px 0px 4px 4px;
+
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-container {
@@ -284,13 +309,98 @@ body {
 .team-text {
   text-align: center;
 }
+
+.team-soc-list {
+  display: flex;
+  gap: var(--main-gaps);
+  margin-top: 8px;
+  justify-content: center;
+}
+.team-soc-item {
+  width: 40px;
+  height: 40px;
+}
+
+.team-soc-link {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 50%;
+  background: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-soc-link:is(:hover, :focus) {
+  background-color: #404bbf;
+}
+
+.team-icons {
+  width: 16px;
+  height: 16px;
+}
+
+/**-----------CUSTOMERS-------------*/
+
+.customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.custemers-title {
+  width: 183px;
+  margin: 0 auto;
+
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.customers-list {
+  display: flex;
+  gap: var(--main-gaps);
+  margin-top: 72px;
+}
+
+.customers-list-item {
+  width: 168px;
+  height: 88px;
+}
+
+.customers-list-link {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: #8e8f99;
+}
+
+.customers-list-link:is(:hover, :focus) {
+  border: 1px solid #404bbf;
+}
+
+.customers-list-link:is(:hover, :focus) .customers-list-icons {
+  fill: #404bbf;
+}
+
 /**-----------FOOTER-------------*/
 .footer {
   padding-top: 100px;
   padding-bottom: 100px;
 }
+
 .container-footer {
+  display: flex;
+}
+
+.footer-logo {
   width: 264px;
+  margin-right: 120px;
 }
 
 .logo-text-footer {
@@ -303,9 +413,53 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+
+.footer-soc {
+  width: 208px;
+  height: 80px;
+}
+
+.footer-soc-text {
+  margin-bottom: 16px;
+
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.footer-soc-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-soc-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-soc-link {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 50%;
+  background-color: #424255;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-soc-link:is(:hover, :focus) {
+  background-color: #31d0aa;
+  /*! Не працює фокус? Чому? */
+}
+
+.footer-icons {
+  width: 24px;
+  height: 24px;
+}
+
 /**-----------PORTFOLIO-------------*/
 .projects {
-  /* background-color: coral; */
   padding-top: 96px;
   padding-bottom: 120px;
 }
@@ -316,15 +470,12 @@ body {
   justify-content: center;
 }
 
-.project-list-buttons > li {
-}
-
 .projects-button {
   padding: 12px 24px;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
 
-  /* font-family: 'Roboto', sans-serif; */
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -337,6 +488,11 @@ body {
   color: #ffffff;
   background: #404bbf;
   border-color: transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.project-list-item {
+  width: 360px;
 }
 
 .project-list-jobs {
@@ -347,7 +503,14 @@ body {
   row-gap: 48px;
 }
 
-.container-description {
+.project-list-link:is(:hover, :focus) {
+  display: block;
+  border: 1px solid #f4f4fd;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.project-container-description {
   padding-top: 32px;
   padding-bottom: 32px;
   padding-left: 16px;
@@ -358,5 +521,3 @@ body {
 .projects-subtitle {
   margin-bottom: 8px;
 }
-
-/* .projects-tittle {} */
