--- a/css/styles.css
+++ b/css/styles.css
@@ -184,6 +184,8 @@ body {
 
 /** -----------HERO-------------*/
 .hero {
+  max-width: 1440px;
+  margin: 0 auto;
   padding-top: 188px;
   padding-bottom: 188px;
   background-image: linear-gradient(
@@ -210,6 +212,7 @@ body {
   min-width: 169px;
   height: 56px;
   margin: 0 auto;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: 1px solid transparent;
 
@@ -244,12 +247,14 @@ body {
 }
 
 .about-icons-container {
-  width: 264px;
   height: 112px;
   background-color: #f4f4fd;
   border-radius: 4px;
   margin-bottom: 8px;
-  padding: 24px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding: 24px 100px; */
 }
 
 .about-icons {
@@ -503,9 +508,11 @@ body {
   row-gap: 48px;
 }
 
-.project-list-link:is(:hover, :focus) {
+.project-list-link {
   display: block;
-  border: 1px solid #f4f4fd;
+}
+
+.project-list-link:is(:hover, :focus) {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
